[project]
name = "pyloquent"
version = "0.2.0"
description = "Eloquent-inspired ORM for Python with Pydantic and FastAPI support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pyloquent Team"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["orm", "database", "sql", "eloquent", "pydantic", "async"]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-core>=2.0.0",
    "aiosqlite>=0.19.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.28.0",
]
mysql = [
    "aiomysql>=0.2.0",
]
redis = [
    "redis>=4.6.0",
]
factory = [
    "faker>=18.0.0",
]
d1 = [
    "httpx>=0.25.0",
]
fastapi = [
    "fastapi>=0.100.0",
]
all = [
    "asyncpg>=0.28.0",
    "aiomysql>=0.2.0",
    "redis>=4.6.0",
    "faker>=18.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/avltree9798/pyloquent"
Documentation = "https://github.com/avltree9798/pyloquent/blob/master/DOCUMENTATION.md"
Repository = "https://github.com/avltree9798/pyloquent"
Issues = "https://github.com/avltree9798/pyloquent/issues"

[project.scripts]
pyloquent = "pyloquent.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["pyloquent"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=pyloquent --cov-report=term-missing --cov-report=html"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["pyloquent"]
omit = [
    "*/tests/*",
    "*/test_*",
    # Require live external services — not testable in CI
    "pyloquent/database/mysql_connection.py",
    "pyloquent/database/postgres_connection.py",
    "pyloquent/d1/*",
    "pyloquent/cache/*",
    # CLI file-system / subprocess I/O
    "pyloquent/cli/*",
    # Schema DDL + migration runner (depend on file system and running DB)
    "pyloquent/schema/*",
    "pyloquent/migrations/*",
    # Factory class (Faker dependency, thin wrapper)
    "pyloquent/factories/*",
    # Type stubs only
    "pyloquent/types.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
